--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,16 @@ dependencies {
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
+    def room_version = "2.1.0-alpha07"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.hamcrest:hamcrest:2.1'
     testImplementation 'org.robolectric:robolectric:4.2'
     testImplementation 'org.mockito:mockito-core:2.24.5'
+    testImplementation "androidx.room:room-testing:$room_version"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
 }
