--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ android {
 }
 
 dependencies {
-    def room_version = "2.1.0-alpha07"
+    // There is no stable release of Room in androidx at the moment.
+    // Therefore using a Pre-Androdx version to comply with the project
+    // requirements.
+    def room_version = "1.1.1"
     def lifecycle_version = "2.0.0"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -44,14 +47,14 @@ dependencies {
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.hamcrest:hamcrest:2.1'
     testImplementation 'org.robolectric:robolectric:4.2'
     testImplementation 'org.mockito:mockito-core:2.24.5'
-    testImplementation "androidx.room:room-testing:$room_version"
+    testImplementation "android.arch.persistence.room:testing:$room_version"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
